Fixed captioned images not respecting alignment

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Author: Scott Smith
 Author URI: http://ScottHSmith.com/
 Description: A minimal, modern theme, designed to be mobile first and very responsive, Decode features the ability to change all the colors in the theme, an elegant sidebar conveniently accessed by tapping on the menu icon. The sidebar can hold any number of widgets you choose and you can choose to have the sidebar to be on the left or right side of the page and whether it should stay visible all the time or be closeable. You can also disable the sidebar and comment links if you choose. Decode supports link posts, where the title can be hyperlinked. Decode includes custom social icons in the header that you can easily link to your choice of 24 different social profiles from Twitter, and App.net, to Pinterest and LinkedIn, you will be sure to find support for the network you want. Lastly, Decode is also built alongside a companion plugin that adds a sleek reply tool that lets readers send you a reply about the post using Twitter or App.net. More info here: http://scotthsmith.com/projects/decode/.
 Tags: one-column, two-columns, left-sidebar, right-sidebar, flexible-width, custom-background,  custom-colors, custom-header, editor-style, featured-images, post-formats, rtl-language-support, sticky-post, theme-options, threaded-comments, black, blue, brown, gray, green, orange, pink, purple, red, silver, tan, white, yellow, dark, light
-Version: 2.7.6
+Version: 2.7.7
 Text Domain: decode
 License: GNU General Public License
 License URI: license.txt
@@ -353,17 +353,17 @@ a {
 	}
 
 /* Alignment */
-.entry-content img.alignleft {
+.entry-content .alignleft {
 	display: inline;
 	float: left;
 	margin-right: 2.5%;
 }
-.entry-content img.alignright {
+.entry-content .alignright {
 	display: inline;
 	float: right;
 	margin-left: 2.5%;
 }
-.entry-content img.aligncenter {
+.entry-content .aligncenter {
 	clear: both;
 	display: block;
 	margin: 0 auto;
